tests/sksl/errors/ReservedNameSampler1DShadow.glsl
### Compilation failed:

error: 1: name 'sampler1DShadow' is reserved
int sampler1DShadow;
    ^^^^^^^^^^^^^^^
1 error
